--- a/main.ipynb
+++ b/main.ipynb
@@ -41,16 +41,34 @@
     "# such that you know the solution when the outputs are released\n",
     "\n",
     "def small(G: nx.Graph):\n",
-    "    # TODO add edges to complete the small input\n",
-    "    pass\n",
+    "    # All vertices are connected with a weight of at least 1\n",
+    "    nodes = list(G)\n",
+    "    for i in range(len(nodes)):\n",
+    "        for j in range(i + 1, len(nodes)):\n",
+    "            u = nodes[i]\n",
+    "            v = nodes[j]\n",
+    "            w = random.randint(1, 1000)\n",
+    "            G.add_edge(u, v, weight=w)\n",
     "    \n",
     "def medium(G: nx.Graph):\n",
-    "    # TODO add edges to complete the medium input\n",
-    "    pass\n",
+    "    # First 270 vertices each have 30 edges, Last 30 may or may not be connected to the first 270\n",
+    "    nodes = list(G)\n",
+    "    for i in range(len(nodes) - 30):\n",
+    "        u = nodes[i]\n",
+    "        selected_v = random.sample(nodes[i+1:], 30)\n",
+    "        for v in selected_v:\n",
+    "            w = random.randint(1, 1000)\n",
+    "            G.add_edge(u, v, weight=w)\n",
     "    \n",
     "def large(G: nx.Graph):\n",
-    "    # TODO add edges to complete the large input\n",
-    "    pass"
+    "    # First 990 vertices each have 10 edges, last 10 may or may not be connected to the first 990\n",
+    "    nodes = list(G)\n",
+    "    for i in range(len(nodes) - 10):\n",
+    "        u = nodes[i]\n",
+    "        selected_v = random.sample(nodes[i+1:], 10)\n",
+    "        for v in selected_v:\n",
+    "            w = random.randint(1, 1000)\n",
+    "            G.add_edge(u, v, weight=w)"
    ]
   },
   {
@@ -61,14 +79,17 @@
    "source": [
     "G = nx.empty_graph(N_SMALL)\n",
     "small(G)\n",
+    "assert validate_input(G)\n",
     "write_input(G, 'small.in')\n",
     "\n",
     "G = nx.empty_graph(N_MEDIUM)\n",
     "medium(G)\n",
+    "assert validate_input(G)\n",
     "write_input(G, 'medium.in')\n",
     "\n",
     "G = nx.empty_graph(N_LARGE)\n",
     "large(G)\n",
+    "assert validate_input(G)\n",
     "write_input(G, 'large.in')"
    ]
   },
@@ -141,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
