--- a/main.ipynb
+++ b/main.ipynb
@@ -20,14 +20,8 @@
    "outputs": [],
    "source": [
     "# The starter code is short and simple, take a look!\n",
-    "from starter import *"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Phase 1 - Create Inputs"
+    "from starter import *\n",
+    "from solver import solve"
    ]
   },
   {
@@ -35,62 +29,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Add edges with G.add_edge(u, v, weight=w)\n",
-    "# Idea: consider making the inputs with a solution in mind, \n",
-    "# such that you know the solution when the outputs are released\n",
-    "\n",
-    "def small(G: nx.Graph):\n",
-    "    # TODO add edges to complete the small input\n",
-    "    pass\n",
-    "    \n",
-    "def medium(G: nx.Graph):\n",
-    "    # TODO add edges to complete the medium input\n",
-    "    pass\n",
-    "    \n",
-    "def large(G: nx.Graph):\n",
-    "    # TODO add edges to complete the large input\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = nx.empty_graph(N_SMALL)\n",
-    "small(G)\n",
-    "write_input(G, 'small.in')\n",
-    "\n",
-    "G = nx.empty_graph(N_MEDIUM)\n",
-    "medium(G)\n",
-    "write_input(G, 'medium.in')\n",
-    "\n",
-    "G = nx.empty_graph(N_LARGE)\n",
-    "large(G)\n",
-    "write_input(G, 'large.in')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Phase 2 - Implement your Solver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def solve(G: nx.Graph):\n",
-    "    # TODO implement this function with your solver\n",
-    "    # Assign a team to v with G.nodes[v]['team'] = team_id\n",
-    "    # Access the team of v with team_id = G.nodes[v]['team']\n",
-    "    pass"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -127,7 +66,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +80,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
